<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Budget Manager</string>
    <string name="settings">Einstellungen</string>
    <string name="save">Speichern</string>
    <string name="cancel">Abbrechen</string>
    <string name="budget_overview">Budgetübersicht</string>
    <string name="please_wait">Bitte warten</string>
    <string name="launching_application">Anwendung wird gestartet</string>
    <string name="beginning_of_budget_cycle">Beginn des Budget Zyklus</string>
    <string name="end_of_budget_cycle">Ende des Budget Zyklus</string>
    <string name="monthly_income">Monatliche Einnahmen</string>
    <string name="monthly_expenses">Monatliche Ausgaben</string>
    <string name="add">Hinzufügen</string>
    <string name="delete">Löschen</string>
    <string name="amount">Betrag</string>
    <string name="group">Gruppe</string>
    <string name="entry_details" formatted="false">%s für %s, hinzugefügt am %s</string>
    <string name="monthly_amount">Monatlicher Betrag</string>
    <string name="cashflow_direction">Haushaltsmittel</string>
    <string name="income">Einnahmen</string>
    <string name="expenses">Ausgaben</string>
    <string name="edit_entry">Haushaltsmittel bearbeiten</string>
    <string name="medicine">Medizin</string>
    <string name="clothes">Kleidung</string>
    <string name="groceries">Lebensmittel</string>
    <string name="accessories">Zubehörteile/Gadgets</string>
    <string name="travel">Reisen</string>
    <string name="pets">Haustiere/Zubehör</string>
    <string name="books">Bücher</string>
    <string name="presents">Geschenke</string>
    <string name="rent">Miete</string>
    <string name="insurance">Versicherungen</string>
    <string name="salary">Gehalt</string>
    <string name="available_budget">Verfügbares Budget</string>
    <string name="reset_settings">Einstellungen Zurücksetzen</string>
    <string name="budget_settings">Budget Einstellungen</string>
    <string name="add_entry">Position hinzufügen</string>
    <string name="edit">Bearbeiten</string>
    <string name="start_new_cycle">Neuen Budget Zyklus starten</string>
    
    <string-array name="casfhlow_direction_suggestions">
        <item>@string/expenses</item>
        <item>@string/income</item>
    </string-array>

</resources>