<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/beginning_of_budget_cycle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/a_budget_settings_cycle_beginning"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp" />

        <include layout="@layout/w_divider" />

        <include layout="@layout/w_available_budget" />

        <include layout="@layout/w_divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/monthly_income"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/a_budget_settings_income_block"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <include layout="@layout/w_divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/monthly_expenses"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/a_budget_settings_expenses_block"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>

</ScrollView>